--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,31 +3,45 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="neural.imagerecognizer.app">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+
+
     <application
             tools:replace="android:theme"
             android:name="neural.imagerecognizer.app.RecognitionApp"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/chat"
             android:label="@string/app_name"
             android:theme="@style/MyAppTheme">
 
         <activity android:name="com.desmond.squarecamera.CameraActivity"/>
 
         <activity
-                android:name="neural.imagerecognizer.app.ui.activities.MainActivity"
-                android:screenOrientation="portrait"
-                android:label="@string/app_name">
+            android:name="neural.imagerecognizer.app.ui.activities.HomeActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+
+        <activity
+                android:name="neural.imagerecognizer.app.ui.activities.MainActivity"
+                android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name="neural.imagerecognizer.app.ui.activities.SelectActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 
 </manifest>
